--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0",
+    "antd": "^3.16.3",
     "chalk": "^2.4.1",
     "compression": "1.7.2",
     "connected-react-router": "4.5.0",
